# proselint

./: .bumpversion.cfg  .codeclimate.yml  .coveralls.yml  .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .proselintrc  .ruff.toml  .travis.yml  A More Perfect Entrenchment.md  CHANGELOG.md  CONTRIBUTING.md  Dangerfile  Gemfile  LICENSE  LICENSE.md  MANIFEST.in  PERFORMANCE.md  Procfile  README.md  README_IMPROVEMENTS.md  RELEASE.md  alejandra.toml  app.py  appveyor.yml  benchmark.py  cliff.toml  clock.py  codecov.yml  demo.md  final_verification.py  flake.nix  futurizing_output.txt  proselint.1  pyproject.toml  render.sh  requirements.txt  run_ci_checks.sh  setup.cfg  (+5 more)
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.md  check-request.md  false-positive-report.md  false-positive.md  feature-request.md  rfc.md  rule-request.md
.github/PULL_REQUEST_TEMPLATE/: template.md
.github/workflows/: cd-publish.yml  cd-pypi.yml  cd-site.yml  ci-danger.yml  ci-label.yml  ci-lint-test.yml
corpora/: README.md  dorothy_parker-men_im_not_married_to.txt  index.html
corpora/works/: dorothy_parker_men_im_not_married_to.txt  franz_kafka_a_hunger_artist.txt  george_orwell_politics_and_the_english_language.txt  litton_strachey_eminent_victorians.txt  oscar_wilde_de_profundis.txt  plos_climate_and_health_at_a_critical_juncture.txt  plos_publishing_with_purpose.txt
data/: taskmanager.db-shm  taskmanager.db-wal
docs/: _Footer.md  approach.md  checks.md  home.md  philosophy.md  plugins.md  utility.md  wire-schema.md
examples/: use_as_module.py
mcp-server/: README.md  package-lock.json  package.json  test-mcp.js  test.txt  tsconfig.json
mcp-server/src/: index.ts
nix/: apps.nix  checks.nix  dev-shells.nix  frictionless.nix  helpers.nix  packages.nix  proselint-api.nix  proselint-web.nix
plugins/: README.md
plugins/atom/: README.md  package.json
plugins/flycheck/: Cask  flycheck-proselint.el
plugins/sublime/: .sublimelinterrc  .travis.yml  README.md  linter.py  messages.json
plugins/vim/: proselint.vim  readme.md
plugins/webeditor/: LICENSE  cm-validator-remote.js  index.html  reqwest.min.js
proselint/: .proselintrc  __init__.py  __main__.py  backports.py  cache.py  cli.py  command_line.py  config.py  config_base.py  config_default.py  config_paths.py  core.py  demo.md  errors.py  executor.py  fast_cli.py  lint_cache.py  lint_checks.py  log.py  logger.py  memoize.py  memoizer.py  memory.py  monitoring.py  optimizations.py  optimized_checks.py  parallel.py  paths.py  regex_safety.py  score.py  test.py  thread_safe.py  tools.py  validation.py  version.py
proselint-rs/: Cargo.toml
proselint-rs/crates/proselint/: Cargo.toml
proselint-rs/crates/proselint-checks/: Cargo.toml
proselint-rs/crates/proselint-checks/src/: annotations.rs  archaism.rs  hedging.rs  lexical_illusions.rs  lib.rs  malapropisms.rs
proselint-rs/crates/proselint-checks/src/cliches/: hell.rs  misc.rs  mod.rs
proselint-rs/crates/proselint-checks/src/consistency/: mod.rs  spacing.rs  spelling.rs
proselint-rs/crates/proselint-checks/src/dates_times/: am_pm.rs  dates.rs  mod.rs
proselint-rs/crates/proselint-checks/src/industrial_language/: airlinese.rs  bureaucratese.rs  chatspeak.rs  commercialese.rs  corporate_speak.rs  jargon.rs  mod.rs
proselint-rs/crates/proselint-checks/src/misc/: apologizing.rs  back_formations.rs  braces.rs  but.rs  capitalization.rs  composition.rs  currency.rs  debased.rs  greylist.rs  illogic.rs  mod.rs
proselint-rs/crates/proselint-registry/: Cargo.toml
proselint-rs/crates/proselint-registry/src/: checks.rs  lib.rs
proselint-rs/crates/proselint-registry/src/checks/: types.rs
proselint-rs/crates/proselint/src/: args.rs  lib.rs  main.rs  utils.rs
proselint-rs/crates/proselint/src/config/: base.rs  default.toml  mod.rs  paths.rs
proselint/checks/: __init__.py  airlinese.py  annotations.py  archaism.py  cursing.py  dfw_uncomparables.py  example_check.py  hedging.py  hyperbole.py  lexical_illusions.py  lgbtq.py  malapropisms.py  mau_a_vs_an.py  mau_abbetor.py  mau_abbreviable.py  mau_academically.py  mau_acquirer.py  mau_addable.py  mau_adducible.py  mau_preferred_forms.py  mau_redundancy.py  mau_tortfeasor.py  mixed_metaphors.py  mondegreens.py  needless-variants  needless_variants.py  nonwords.py  oxymorons.py  passive_voice.py  psychology.py  scientific.py  sexism.py  skunked_terms.py  strunk_white_eos.py  uncomparables.py  weasel_words.py
proselint/config/: __init__.py  default.json  paths.py
proselint/modes/: default.proselint
scripts/: benchmark_algos.py  benchmark_checks.py  benchmark_constants.py  benchmark_hashes.py  benchmark_linter.py  benchmark_list_alternatives.py  benchmark_regex.py  benchmark_str_format.py  generate_posts.py  insert_demo.py  profile_linter.py  test_hyperlinks_on_shell.py
scripts_web/: __init__.py  app.py  clock.py  worker.py
site/: 404.md  CNAME  README.md  _config.yml  about.md  build.py  index.html  s3_website.yml  toc.html  write
tests/: __init__.py  _test_mau_a_vs_an.py  _test_version.py  check.py  common.py  conftest.py  examples.py  illegal-chars.txt  illegal_chars.txt  invalid-chars.txt  test-proselintrc.json  test_ableism_offensive_terms.py  test_ableism_terms.py  test_airlinese.py  test_annotations.py  test_archaism.py  test_butterick_symbols.py  test_cache  test_cache_clear.py  test_cache_function.py  test_check_examples.py  test_check_structures.py  test_check_types.py  test_checks.py  test_clear_cache.py  test_cli.py  test_cliches.py  test_config_default.py  test_config_flag.py  test_config_flag_proselintrc  test_config_flag_proselintrc.json  test_consistency_check.py  test_consistency_spacing.py  test_consistency_spelling.py  test_corporate_speak.py  test_cursing_filth.py  test_cursing_nfl.py  test_cursing_nword.py  test_dates_times_am_pm.py  test_dates_times_dates.py  (+125 more)
website/: .gitignore  build.py  help.html  index.html  package.json  pnpm-lock.yaml  reset.css  rules.html  rules.mjs  styles.css  vite.config.js
(+584 files in other folders)
