[project]
name = "proselint"
description = "A linter for prose."
license = {file = "LICENSE.md"}
authors = [{ name = "Amperser Labs", email = "hello@amperser.com"}]
readme = "README.md"
classifiers = [
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming language :: Python :: 3",
	"Programming language :: Python :: 3.9",
	"Programming language :: Python :: 3.10",
	"Programming language :: Python :: 3.11",
	"Programming language :: Python :: 3.12",
	"Programming language :: Python :: 3.13",
	"License :: OSI Approved :: BSD License",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
	"click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/amperser/proselint"
Repository = "https://github.com/amperser/proselint"
Issues = "https://github.com/amperser/proselint/issues"

[project.scripts]
proselint = "proselint.command_line:proselint"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poe.tasks]
test = "pytest"
test-cover = "pytest --cov=proselint --cov-report=lcov"
lint = "ruff check proselint tests"
format = "ruff format --preview proselint tests"

[dependency-groups]
test = [
	"coverage>=7.4.0",
	"mock>=2.0.0",
	"pytest>=7.0.0",
	"pytest-cov>=4.0.0",
	"rstr>=3.2.2",
]
dev = [
	"bumpversion>=0.5.3",
	"ruff>=0.1.14",
	"hatchling>=1.27.0",
	"poethepoet>=0.34.0",
]
web = [
	"APScheduler>=3.5.3",
	"Flask-API>=1.0",
	"Flask-Cors>=3.0.4",
	"Flask>=1.1.4",
	"Flask-Limiter>=1.0.1",
	"gunicorn>=19.8.1",
	"gmail @ git+https://github.com/charlierguo/gmail.git",
	"redis>=2.10.6",
	"requests>=2.19.1",
	"rq>=0.12.0",
]

[tool.setuptools]
packages = ["proselint"]

[tool.setuptools.dynamic]
version = { attr = "proselint.version.__version__" }
