[project]
name = "proselint"
description = "A linter for prose."
version = "0.14.0"
license = {file = "LICENSE.md"}
authors = [{ name = "Amperser Labs", email = "hello@amperser.com"}]
readme = "README.md"
classifiers = [
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming language :: Python :: 3",
	"Programming language :: Python :: 3.9",
	"Programming language :: Python :: 3.10",
	"Programming language :: Python :: 3.11",
	"Programming language :: Python :: 3.12",
	"Programming language :: Python :: 3.13",
	"License :: OSI Approved :: BSD License",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/amperser/proselint"
Repository = "https://github.com/amperser/proselint"
Issues = "https://github.com/amperser/proselint/issues"

[project.scripts]
proselint = "proselint.command_line:main"

[build-system]
requires = ["uv_build>=0.7.22,<0.8.0"]
build-backend = "uv_build"

[tool.poe.tasks]
test = "pytest"
test-cover = "pytest --cov=proselint --cov-report=lcov"
lint = "ruff check proselint tests"
format = "ruff format --preview proselint tests"

[dependency-groups]
test = [
	"hypothesis>=6.135.11",
	"pytest>=8.4.1",
	"pytest-cov>=6.2.1",
	"rstr>=3.2.2",
]
dev = [
	"bumpversion>=0.5.3",
	"ruff>=0.1.14",
	"poethepoet>=0.34.0",
]
web = [
	"APScheduler>=3.5.3",
	"Flask-API>=1.0",
	"Flask-Cors>=3.0.4",
	"Flask>=1.1.4",
	"Flask-Limiter>=1.0.1",
	"gunicorn>=19.8.1",
	"gmail @ git+https://github.com/charlierguo/gmail.git",
	"redis>=2.10.6",
	"requests>=2.19.1",
	"rq>=0.12.0",
]

[tool.uv.build-backend]
module-name = "proselint"
module-root = ""
source-include = ["tests/**"]
