[package]
name = "proselint-checks"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.33"
phf = { version = "0.11.2", features = ["macros"] }
proselint-registry = { workspace = true }
regex = { workspace = true }
