[package]
name = "proselint-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.11.2"
regex = { workspace = true }
fancy-regex = { workspace = true }
