[package]
name = "proselint"
description = "proselint, a linter for prose."
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["preserve_order", "toml"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["preserve_order"], optional = true }
thiserror = "1.0.61"
toml = { version = "0.8.14", features = ["preserve_order"] }
proselint-registry = { workspace = true }
proselint-checks = { workspace = true }
rayon = "1.10.0"
regex = { workspace = true }
walkdir = "2.5.0"

[features]
default = ["demo", "json_config"]
demo = []
json_config = ["config/json", "serde_json"]
